Changes in stable release 2.4.15 (not released yet)

* Windows using the WindowListSkip style do not appear in the
  FvwmTaskBar at random.

Changes in stable release 2.4.14 (29-Nov-2002)

* Modules do not crash anymore when more than 126 windows are on
  the desktop.

* FvwmIconMan displays windows correctly that were iconified and
  then moved to another page.

* Appliation provided icon windows no longer appear at 0 0 when
  restarting.

* The built-in session management can handle window names, classes
  etc. beginning with whitespace (textedit).

* Removed the flawed "A"ny context key binding patch from 2.4.13.

* The default EdgeScroll (if not specified) was incorrectly
  assumed to be 100 pixels instead of 100 percents.

* Icons no longer appear on top of all other windows after a
  restart.

-------------------------------------------------------------------

Changes in stable release 2.4.13 (1-Nov-2002)

* Icon titles for windows with an icon position hint no longer
  appear at random places.

* Fvwm no longer displays two icon pictures when switching from
  NoIconOverride to IconOverride with windows that provide their
  own icon window.

* The Current, All, Pick, ThisWindow and PointerWindow commands
  work on shaded windows too.

* Fixed a problem stacking iconified transients.

* No more flickering when raising transients.

* Fixed a number of problems with window stacking, some new in
  2.4.10 or later, some older problems that have been around for a
  long time.

* Windows starting lowered or on any layer other than the default
  layer are displayed at the right place in FvwmPager.

* Bindings with the "A"ny context can not be overridden by Gnome
  panel or OpenOffice.

-------------------------------------------------------------------

Changes in stable release 2.4.12 (10-Oct-2002)

* Fixed drawing problems with TiledPixmap and Solid MenuFaces which
  appeared in 2.4.10, replacing the same problem with ?Gradient
  MenuFaces in 2.4.9.
