@@ -1,3 +1,10 @@
+2002-12-01  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmScript/Instructions.c (ChangeIcon):
+	(ChangeForeColor):
+	(ChangeBackColor):
+	Fixed memory leaks
+
 2002-11-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
